iac-kubernetes/manifest/argocd/argocd-ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress-route
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.local.gunturpoetra.com`)
      kind: Rule
      services:
        - name: argocd-server
          namespace: argocd
          port: 80
  tls:
    secretName: local-gunturpoetra-com-production-tls
